# miner_api_schema

./: .gitignore  main.rpc.py  pyproject.toml
miner_api_schema/: base.py  multi.py
miner_api_schema/fans/: __init__.py
miner_api_schema/hashboards/: __init__.py
miner_api_schema/mining/: __init__.py
miner_api_schema/pools/: __init__.py
miner_api_schema/power/: __init__.py
miner_api_schema/rpc/: __init__.py
miner_api_schema/schema/: base.py  multi.py
miner_api_schema/schema/fans/: __init__.py
miner_api_schema/schema/hashboards/: __init__.py
miner_api_schema/schema/mining/: __init__.py
miner_api_schema/schema/pools/: __init__.py
miner_api_schema/schema/power/: __init__.py
